2014-03-02  Kaz Kylheku  <kaz@kylheku.com>

	Version 83

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated

	* dep.mk: Updated.

2014-03-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand): Bugfix. When processing a defvar, should mark
	the variable as special at expansion time. Without this, binding
	forms in other parts of the tree won't be expanded properly
	to bring about the special semantics.

2014-03-02  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (unquotes_occur): Fix use of unquote_s rather than sys_unquote_s
	which breaks backquote, caught by tests/010/reghash.txr.
	I thought fixed this already! But I must have made the change to y.tab.c
	rather than parser.y.

	* Makefile (lex.yy.c, y.tab.c): Make these files readonly to prevent
	unintended edits.

2014-03-02  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Skip lines that contain system_package.

	* txr.vim: Regenerated.

2014-03-02  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix: catenated stream objects not hooked into garbage collector,
	causing premature collection of the catenated stream list.

	* stream.c (cat_mark): new function.
	(cat_stream_ops): use cat_mark for gc mark function.

2014-03-01  Kaz Kylheku  <kaz@kylheku.com>

	New quasiquote idea: let's have two quasiquote macros sharing one
	expander. One macro based on sys:qquote, sys:unquote and sys:splice,
	and the other based on qquote, unquote and splice in the user package.
	The read syntax puts out the sys: one.

	* eval.c (expand_qquote): Takes three additional arguments: the
	qquote, unquote and splice symbols to recognize.
	The invalid splice diagnostic is adjusted based on which backquote
	we are expanding.
	(me_qquote): Look at the symbol in the first position of the form
	and then expand either the internal quasiquote macro or the public one,
	passing the right symbols into expand_qquote.
	(eval_init): Register error-throwing stub functions